--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "awesome-db-admin",
   "version": "1.0.0",
   "description": "A graceful database admin panel.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,20 @@
   "bugs": {
     "url": "https://github.com/Annlix/awesome-db-admin/issues"
   },
-  "homepage": "https://github.com/Annlix/awesome-db-admin#readme"
+  "homepage": "https://github.com/Annlix/awesome-db-admin#readme",
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
+    "style-loader": "^1.2.1",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
