--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack && node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,18 +22,31 @@
   },
   "homepage": "https://github.com/Annlix/awesome-db-admin#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-regular-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
+    "ant-design-vue": "^1.6.2",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "vue": "^2.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "json5-loader": "^4.0.0",
+    "open": "^7.0.4",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "vue-loader": "^15.9.3",
+    "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
